@startuml
interface "IFlux`2"<in TKey,in TStorage> {
    Dispatch(key:TKey) : void
}
interface "IFluxParam`3"<in TKey,in TParam,in TStorage> {
    Dispatch(key:TKey, param:TParam) : void
}
interface "IFluxReturn`3"<in TKey,out TReturn,in TStorage> {
    Dispatch(key:TKey) : TReturn
}
interface "IFluxParamReturn`4"<in TKey,in TParam,out TReturn,in TStorage> {
    Dispatch(key:TKey, param:TParam) : TReturn
}
class "IStore`2"<T1,T2> {
}
"IStore`2" "<TKey,TStorage>" <|-- "IFlux`2"
"IStore`2" "<TKey,TStorage>" <|-- "IFluxParam`3"
"IStore`2" "<TKey,TStorage>" <|-- "IFluxReturn`3"
"IStore`2" "<TKey,TStorage>" <|-- "IFluxParamReturn`4"
@enduml
